--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "xstate": "^4.8.0"
+  },
   "devDependencies": {
     "@babel/core": "7.2.0",
-    "parcel-bundler": "^1.6.1"
+    "parcel-bundler": "^1.6.1",
+    "typescript": "^3.8.3"
   },
-  "keywords": [
-    "javascript",
-    "starter"
-  ]
+  "license": "MIT"
 }
